--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
         <script type="text/javascript">
             //My api key
             var apikey = {
-                key: '1c7b13d1-e339-47ff-8ac8-6eb576e365d1'
+                //Pegue a Sua Api Key Pelo Link: https://pro.coinmarketcap.com/signup
+                key: 'Aqui vai a sua Api Key'
             }
 
         //GET Fetch Requisition
